<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_approval_requests"
            android:icon="@drawable/ic_menu_approval_requests"
            android:title="@string/menu_navigation_approval_requests" />
        <item
            android:id="@+id/nav_tokens"
            android:icon="@drawable/ic_menu_tokens"
            android:title="@string/menu_navigation_tokens" />
    </group>
</menu>
